body modified by feature 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Git Practical</title>
   </head>
   <body>
-    My first git tutorial is prepared.
+    feature 2 added this body.
   </body>
 </html>
